{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 153,
  "lineage": "4a66545c-2dc1-9785-932a-1aadf907ae90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f432f9d4a4057147",
            "association_id": "eipassoc-0440477ce9e8e556c",
            "domain": "vpc",
            "id": "eipalloc-0f432f9d4a4057147",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0c573ae2f94cf5489",
            "private_dns": "ip-10-0-0-217.eu-west-3.compute.internal",
            "private_ip": "10.0.0.217",
            "public_dns": "ec2-13-37-173-172.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.173.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ECF-studi-kluster-ngw-ip"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-ngw-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:internet-gateway/igw-026486745b9862aaa",
            "id": "igw-026486745b9862aaa",
            "owner_id": "380762671966",
            "tags": {
              "Name": "ECF-studi-kluster-igw"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-igw"
            },
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f432f9d4a4057147",
            "association_id": "eipassoc-0440477ce9e8e556c",
            "connectivity_type": "public",
            "id": "nat-00950f929ec8904ae",
            "network_interface_id": "eni-0c573ae2f94cf5489",
            "private_ip": "10.0.0.217",
            "public_ip": "13.37.173.172",
            "subnet_id": "subnet-0674d9114a199f998",
            "tags": {
              "Name": "ECF-studi-kluster-ngw"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-ngw"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f7704121d17277f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00950f929ec8904ae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f7704121d17277f5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:route-table/rtb-0c9187ebccdad8886",
            "id": "rtb-0c9187ebccdad8886",
            "owner_id": "380762671966",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026486745b9862aaa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ECF-studi-kluster-Default-rt"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-Default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063a2db268eeaff82",
            "route_table_id": "rtb-0c9187ebccdad8886",
            "subnet_id": "subnet-0674d9114a199f998"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087af07361c62f24e",
            "route_table_id": "rtb-0c9187ebccdad8886",
            "subnet_id": "subnet-01abca2889e07878a"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:security-group/sg-0fa1481a643cd3051",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa1481a643cd3051",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ECF-studi-kluster-ControlPlane-sg",
            "name_prefix": "",
            "owner_id": "380762671966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECF-studi-kluster-ControlPlane-sg"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-ControlPlane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data_plane_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:security-group/sg-036d27850e392de76",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036d27850e392de76",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ECF-studi-kluster-Worker-sg",
            "name_prefix": "",
            "owner_id": "380762671966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECF-studi-kluster-Worker-sg"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-Worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:security-group/sg-00ce59ce0b8ccbcde",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00371cff5e3154b65"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00ce59ce0b8ccbcde",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00371cff5e3154b65"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ECF-studi-kluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "380762671966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECF-studi-kluster-cluster-sg"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:security-group/sg-00371cff5e3154b65",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00371cff5e3154b65",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ce59ce0b8ccbcde"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ECF-studi-kluster-node-sg",
            "name_prefix": "",
            "owner_id": "380762671966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECF-studi-kluster-node-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "owned"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-node-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:security-group/sg-07ff42ab6358b7858",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ff42ab6358b7858",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ECF-studi-kluster-Public-sg",
            "name_prefix": "",
            "owner_id": "380762671966",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECF-studi-kluster-Public-sg"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-Public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1082845610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ce59ce0b8ccbcde",
            "security_group_rule_id": "sgr-0352c955b430c7883",
            "self": false,
            "source_security_group_id": "sg-00371cff5e3154b65",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-807586917",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00ce59ce0b8ccbcde",
            "security_group_rule_id": "sgr-0a7f41d4ce68b85ad",
            "self": false,
            "source_security_group_id": "sg-00371cff5e3154b65",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1308259459",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa1481a643cd3051",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "control_plane_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4017179265",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fa1481a643cd3051",
            "security_group_rule_id": "sgr-041f67e262501a331",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.control_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-294301820",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-036d27850e392de76",
            "security_group_rule_id": "sgr-0eeb667e1f985e29e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-201527375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-036d27850e392de76",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-477096479",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00371cff5e3154b65",
            "security_group_rule_id": "sgr-07cb8adf7443e6480",
            "self": false,
            "source_security_group_id": "sg-00ce59ce0b8ccbcde",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24",
              "10.0.3.0/24"
            ],
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3865099903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-036d27850e392de76",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.data_plane_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1115721583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00371cff5e3154b65",
            "security_group_rule_id": "sgr-03011e5fed7ecebc9",
            "self": false,
            "source_security_group_id": "sg-00371cff5e3154b65",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_egress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-313274797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07ff42ab6358b7858",
            "security_group_rule_id": "sgr-001380aae02bf441c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-2205145428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ff42ab6358b7858",
            "security_group_rule_id": "sgr-0a80b304a4fb8456c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_ingress_public_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2959150583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07ff42ab6358b7858",
            "security_group_rule_id": "sgr-04d6b91de2ed6d287",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:subnet/subnet-0cd139160df85e158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd139160df85e158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380762671966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ECF-studi-kluster-private-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-private-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:subnet/subnet-00ce5eddcf5f7c233",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ce5eddcf5f7c233",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380762671966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ECF-studi-kluster-private-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-private-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:subnet/subnet-0674d9114a199f998",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0674d9114a199f998",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380762671966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ECF-studi-kluster-public-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-public-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:subnet/subnet-01abca2889e07878a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01abca2889e07878a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380762671966",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ECF-studi-kluster-public-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-public-sg",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-035ae9c49cd6a38e6"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:380762671966:vpc/vpc-035ae9c49cd6a38e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0605c5903ef86f1c7",
            "default_route_table_id": "rtb-0f7704121d17277f5",
            "default_security_group_id": "sg-0abc669ba23bfedcf",
            "dhcp_options_id": "dopt-0e359bf5673be4a83",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035ae9c49cd6a38e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7704121d17277f5",
            "owner_id": "380762671966",
            "tags": {
              "Name": "ECF-studi-kluster-vpc",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared"
            },
            "tags_all": {
              "Name": "ECF-studi-kluster-vpc",
              "kubernetes.io/cluster/ECF-studi-kluster-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}